--- a/baraholka/templates/advcreate.html
+++ b/baraholka/templates/advcreate.html
@@ -74,7 +74,7 @@
                     {% if editAdvert is not defined  %}
 
                     <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Название" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;" required></div>
-                    <div class="form-group"><textarea class="form-control" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;height: 125px;max-width: 920px;min-width: 920px;" placeholder="Описание" name="description"></textarea></div>
+                    <div class="form-group"><textarea class="form-control" style="text-indent: 0px;color: rgb(0,0,0);font-size: 16px;background: #efefef;height: 125px;max-width: 920px;min-width: 920px;" placeholder="Описание" name="description"></textarea></div>
                     <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;width: 475px;display: inline-block;" required><select class="form-control" style="color: rgb(0,0,0);display: inline-block;width: 200px;font-size: 16px;background: #efefef;margin-left: 42px;" name="category" required>
                             {% for category in categories %}
                             <option {{category.selected}}>{{category.name}}</option>
@@ -89,7 +89,7 @@
 
                     <p style="text-align: center;color: rgb(0,0,0);font-size: 18px;font-weight: bold;background: #ffffff;">Редактирование объявления &quot;{{editAdvert.name}}&quot;</p>
                     <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Название" value="{{editAdvert.name}}" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;" required></div>
-                    <div class="form-group"><textarea class="form-control" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;height: 125px;max-width: 920px;min-width: 920px;" placeholder="Описание" name="description">{{editAdvert.description}}</textarea></div>
+                    <div class="form-group"><textarea class="form-control" style="text-indent: 0px;color: rgb(0,0,0);font-size: 16px;background: #efefef;height: 125px;max-width: 920px;min-width: 920px;" placeholder="Описание" name="description">{{editAdvert.description}}</textarea></div>
                     <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" value="{{editAdvert.address}}" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;width: 475px;display: inline-block;" required><select class="form-control" style="color: rgb(0,0,0);display: inline-block;width: 200px;font-size: 16px;background: #efefef;margin-left: 42px;" name="category" required>
                             {% for category in categories %}
                             <option {{category.selected}}>{{category.name}}</option>
