--- a/baraholka/templates/advcreate.html
+++ b/baraholka/templates/advcreate.html
@@ -36,9 +36,9 @@
     <link rel="stylesheet" href="{{url_for('.static', filename='advcreate/assets/css/untitled.css')}}">
 {% endblock %}
 
-{% block html_attribs %} lang="en" {% endblock %}
+{% block html_attribs %} lang="ru" {% endblock %}
 
-{% block title %}Создать объявление{% endblock %}
+{% block title %}{% if editAdvert is not defined  %}Создание объявления{% else %}Редактирование объявления{% endif %}{% endblock %}
 
 
 
@@ -87,9 +87,9 @@
                 <form id = "advForm" method="post" style="box-shadow: 0px 0px 8px rgba(80,94,108,0.59);max-width: 1000px;width: 1000px;" enctype="multipart/form-data">
                     {% if editAdvert is not defined  %}
 
-                    <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Название" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;"></div>
-                    <div class="form-group"><textarea class="form-control" style="color: rgb(0,0,0);text-indent: 0px;font-size: 16px;background: #efefef;height: 125px;max-width: 920px;" placeholder="Описание" name="description"></textarea></div>
-                    <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;width: 475px;display: inline-block;" required><select class="form-control" style="color: rgb(0,0,0);display: inline-block;width: 200px;font-size: 16px;background: #efefef;margin-left: 42px;" name="category" required>
+                    <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Название" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;" maxlength="256" required></div>
+                    <div class="form-group"><textarea class="form-control" style="color: rgb(0,0,0);text-indent: 0px;font-size: 16px;background: #efefef;height: 125px;max-width: 920px;" placeholder="Описание" name="description" maxlength="4096"></textarea></div>
+                    <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;width: 475px;display: inline-block;" maxlength="512" required><select class="form-control" style="color: rgb(0,0,0);display: inline-block;width: 200px;font-size: 16px;background: #efefef;margin-left: 42px;" name="category" required>
                         {% for category in categories %}
                         <option {{category.selected}}>{{category.name}}</option>
                         {% endfor %}
@@ -105,9 +105,9 @@
                     {% else %}
 
                     <p style="text-align: center;color: rgb(0,0,0);font-size: 18px;font-weight: bold;background: #ffffff;">Редактирование объявления &quot;{{editAdvert.name}}&quot;</p>
-                    <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Название" value="{{editAdvert.name}}" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;"></div>
-                    <div class="form-group"><textarea class="form-control" style="color: rgb(0,0,0);text-indent: 0px;font-size: 16px;background: #efefef;height: 125px;max-width: 920px;" placeholder="Описание" name="description">{{editAdvert.description}}</textarea></div>
-                    <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" value="{{editAdvert.address}}" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;width: 475px;display: inline-block;" required><select class="form-control" style="color: rgb(0,0,0);display: inline-block;width: 200px;font-size: 16px;background: #efefef;margin-left: 42px;" name="category" required>
+                    <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Название" value="{{editAdvert.name}}" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;" maxlength="256" required></div>
+                    <div class="form-group"><textarea class="form-control" style="color: rgb(0,0,0);text-indent: 0px;font-size: 16px;background: #efefef;height: 125px;max-width: 920px;" placeholder="Описание" name="description" maxlength="4096">{{editAdvert.description}}</textarea></div>
+                    <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" value="{{editAdvert.address}}" style="color: rgb(0,0,0);font-size: 16px;background: #efefef;width: 475px;display: inline-block;"maxlength="512" required><select class="form-control" style="color: rgb(0,0,0);display: inline-block;width: 200px;font-size: 16px;background: #efefef;margin-left: 42px;" name="category" required>
                         {% for category in categories %}
                         <option {{category.selected}}>{{category.name}}</option>
                         {% endfor %}
