--- a/baraholka/templates/login.html
+++ b/baraholka/templates/login.html
@@ -34,8 +34,8 @@
                 <div class="illustration" style="margin-top: 0px;font-size: 14px;margin-bottom: 20px;padding-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;font-size: 14px;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;margin-bottom: 20px;" src="{{url_for('.static', filename='login/assets/img/baraholkaBlack.png')}}"></a>
                     <p style="color: rgb(255,255,255);background: #ff3030;font-size: 16px;">{{errorMsg}}</p>
                 </div>
-                <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" value="{{prefilledEmail}}" style="font-size: 16px;background: #efefef;" required></div>
-                <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Пароль" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);" required></div>
+                <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" value="{{prefilledEmail}}" style="font-size: 16px;background: #efefef;" maxlength="256" required></div>
+                <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Пароль" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);" maxlength="256" required></div>
                 <div class="form-group text-center"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 0px;width: 240px;">Войти</button></div><a class="forgot" href="/register">Нет аккаунта? Зарегистрируйтесь</a>
             </form>
         </section>
